servicenow/6.5/modules/ROOT/pages/servicenow-reference.adoc
= ServiceNow Connector 6.6 Reference - Mule 4

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

ServiceNow Connector Version 6.6

Anypoint Connector for ServiceNow (ServiceNow Connector) provides connections between Mule runtime engine (Mule) and ServiceNow apps.

Release Notes: xref:release-notes::connector/servicenow-connector-release-notes-mule-4.adoc[ServiceNow Connector Release Notes]


== Configurations

[[config]]
=== Config


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
|Name | String | The name for this configuration. Connectors reference the configuration with this name. | | x
| Connection a| * <<config_basic-connection, Basic Authentication>>
* <<config_oauth2-auth-code-connection, OAuth 2.0 Authorization Code>>
 | The connection types to provide to this configuration. | | x
| Expiration Policy a| <<ExpirationPolicy>> |  Configures the minimum amount of time that a dynamic configuration instance can remain idle before the runtime considers it eligible for expiration. This does not mean that the platform expires the instance at the exact moment that it becomes eligible. The runtime purges the instances as appropriate. |  |
|===

==== Connection Types
[[config_basic-connection]]
===== Basic Authentication


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Service Address a| String |  Address of the ServiceNow service. |  | x
| ServiceNow Version a| Enumeration, one of:

** EUREKA
** FUJI
** GENEVA
** HELSINKI
** ISTANBUL
** JAKARTA
** KINGSTON
** MADRID
** NEW_YORK
** ORLANDO |  ServiceNow API Version. |  ORLANDO |
| User Tables List a| Array of String |  List of user-defined tables |  |
| User Name a| String |  User Name |  | x
| Password a| String |  Password |  | x
| Transport Configuration a| One of:

* <<http-requester-based-transport-provider>>
* <<basic-auth-http-message-dispatcher-provider>> |  |  |
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  A WSS configuration for the signature security strategy |  |
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  A WSS configuration for the username token security strategy |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Pooling Profile a| <<PoolingProfile>> |  Characteristics of the connection pool |  |
|===
[[config_oauth2-auth-code-connection]]
===== OAuth 2.0 Authorization Code


====== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Service Address a| String |  Address of ServiceNow service. |  | x
| ServiceNow Version a| Enumeration, one of:

** EUREKA
** FUJI
** GENEVA
** HELSINKI
** ISTANBUL
** JAKARTA
** KINGSTON
** MADRID
** NEW_YORK
** ORLANDO |  ServiceNow API Version. |  `ORLANDO` |
| User Tables List a| Array of String |  List of user-defined tables |  |
| Custom Transport Configuration a| <<oauth2-http-message-dispatcher-provider>> |  |  |
| Sign Security Strategy a| <<WssSignSecurityStrategyAdapter>> |  A WSS configuration for the signature security strategy |  |
| Username Token Security Strategy a| <<WssUsernameTokenSecurityStrategyAdapter>> |  A usernameToken WSS configuration |  |
| Reconnection a| <<Reconnection>> |  When the application is deployed, a connectivity test is performed on all connectors. If set to true, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy |  |
| Consumer Key a| String |  The OAuth consumerKey as registered with the service provider |  | x
| Consumer Secret a| String |  The OAuth consumerSecret as registered with the service provider |  | x
| Authorization Url a| String |  The service provider's authorization endpoint URL |  https://{instance-id}.service-now.com/oauth_auth.do |
| Access Token Url a| String |  The service provider's accessToken endpoint URL |  https://{instance-id}.service-now.com/oauth_token.do |
| Scopes a| String |  The OAuth scopes to be requested during the dance. If not provided, it defaults to those in the annotation |  |
| Resource Owner Id a| String |  The Resource Owner ID to use with each component that doesn't otherwise reference a Resource Owner ID.  |  |
| Before a| String |  The name of a flow to execute right before starting the OAuth dance |  |
| After a| String |  The name of a flow to execute right after an accessToken has been received |  |
| Listener Config a| String |  A reference to a <http:listener-config /> to use to create the listener that will catch the access token callback endpoint. |  | x
| Callback Path a| String |  The path of the access token callback endpoint |  | x
| Authorize Path a| String |  The path of the local http endpoint which triggers the OAuth dance |  | x
| External Callback Url a| String |  If the callback endpoint is behind a proxy or should be accessed through a non direct URL, use this parameter to tell the OAuth provider the URL it should use to access the callback |  |
| Object Store a| String |  A reference to the object store to use to store each resource owner ID's data. If not specified, Mule automatically provisions the default object store. |  |
|===

== Supported Operations
* <<invoke>>
* <<unauthorize>>



== Operations

[[invoke]]
=== Invoke
`<servicenow:invoke>`


This operation invokes  ServiceNOW SOAP operations.

==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use. | | x
| Service a| String |  |  | x
| Operation a| String |  The operation name of the service |  | x
| Show Reference Values a| String | Choose which values are returned for reference fields. Possible options are to return `sys_ids` or `display value` or both. Use this option only for `get` and `getRecords` operations. |  |
| Body a| Binary |  The XML body to include in the SOAP message, with all the required parameters, or null if no parameters are required. |  `#[payload]` |
| Headers a| Binary |  The XML headers to include in the SOAP message. |  |
| Attachments a| Object |  The attachments to include in the SOAP request. |  |
| Target Variable a| String |  The name of a variable to store the operation's output. |  |
| Target Value a| String |  An expression to evaluate against the operation's output and store the expression outcome in the target variable |  `#[payload]` |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> |  A retry strategy in case of connectivity errors. |  |
|===

==== Output
[%autowidth.spread]
|===
|Type |<<SoapOutputEnvelope>>
| Attributes Type a| <<SoapAttributes>>
|===

=== For Configurations
* <<config>>

==== Throws
* SERVICENOW:RETRY_EXHAUSTED
* SERVICENOW:SOAP_FAULT
* SERVICENOW:PROCESSING_ERROR
* SERVICENOW:BAD_RESPONSE
* SERVICENOW:TIMEOUT
* SERVICENOW:CONNECTIVITY
* SERVICENOW:BAD_REQUEST
* SERVICENOW:CANNOT_DISPATCH
* SERVICENOW:INVALID_WSDL
* SERVICENOW:ENCODING


[[unauthorize]]
=== Unauthorize
`<servicenow:unauthorize>`

This operation deletes all the access token information of a given resource owner ID so that it's impossible to execute any operation for that user without repeating the OAuth dance.


==== Parameters
[%header,cols="20s,20a,35a,20a,5a"]
|===
| Name | Type | Description | Default Value | Required
| Configuration | String | The name of the configuration to use | | x
| Resource Owner Id a| String |  The ID of the resource owner for whom to invalidate access |  |
|===


=== For Configurations
* <<config>>




== Types
[[WssSignSecurityStrategyAdapter]]
=== Wss Sign Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Configuration a| <<wss-key-store-configuration>> | The keystore to use when signing the message. |  | x
| Sign Algorithm Configuration a| <<WssSignConfigurationAdapter>> | The algorithms to use on the signing. |  |
|===

[[wss-key-store-configuration]]
=== Wss Key Store Configuration

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Key Store Path a| String |  |  | x
| Alias a| String |  |  |
| Password a| String |  |  | x
| Key Password a| String |  |  |
| Type a| String |  | jks |
|===

[[WssSignConfigurationAdapter]]
=== WSS Signing Configuration Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Signature Key Identifier a| Enumeration, one of:

** DIRECT_REFERENCE
** X509_KEY_IDENTIFIER |  | `X509_KEY_IDENTIFIER` |
| Signature Algorithm a| Enumeration, one of:

** RSAwithSHA1
** RSAwithSHA224
** RSAwithSHA256
** RSAwithSHA384
** RSAwithSHA512 |  |  |
| Signature Digest Algorithm a| Enumeration, one of:

** SHA1
** SHA256
** SHA224
** SHA384
** SHA512 |  | `SHA1` |
| Signature C14n Algorithm a| Enumeration, one of:

** CanonicalXML_1_0
** CanonicalXML_1_1
** ExclusiveXMLCanonicalization_1_0 |  | `ExclusiveXMLCanonicalization_1_0` |
|===

[[WssUsernameTokenSecurityStrategyAdapter]]
=== WSS Username Token Security Strategy Adapter

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String | The username required to authenticate with the service. |  | x
| Password a| String | The password for the provided username required to authenticate with the service. |  | x
| Password Type a| Enumeration, one of:

** DIGEST
** TEXT | A #password parameter. | `DIGEST` |
|===

[[Reconnection]]
=== Reconnection

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Fails Deployment a| Boolean | When the application is deployed, a connectivity test is performed on all connectors. If set to `true`, deployment fails if the test doesn't pass after exhausting the associated reconnection strategy. |  |
| Reconnection Strategy a| * <<reconnect>>
* <<reconnect-forever>> | The reconnection strategy to use. |  |
|===

[[reconnect]]
=== Reconnect

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| Count a| Number | How many reconnection attempts to make. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. | `true` |
|===

[[reconnect-forever]]
=== Reconnect Forever

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Frequency a| Number | How often in milliseconds to reconnect. | |
| blocking |Boolean |If `false`, the reconnection strategy runs in a separate, non-blocking thread. | `true` |
|===

[[PoolingProfile]]
=== Pooling Profile

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Active a| Number | Controls the maximum number of Mule components that can be borrowed from a session at one time. When set to a negative value, there is no limit to the number of components that can be active at one time. When the specified value for maxActive is exceeded, the pool is considered exhausted. |  |
| Max Idle a| Number | Controls the maximum number of Mule components that can sit idle in the pool at any time. When set to a negative value, there is no limit to the number of Mule components that may be idle at one time. |  |
| Max Wait a| Number | Specifies the number of milliseconds to wait for a pooled component to become available when the pool is exhausted and the exhaustedAction is set to WHEN_EXHAUSTED_WAIT. |  |
| Min Eviction Millis a| Number | Determines the minimum amount of time an object may sit idle in the pool before it is eligible for eviction. When non-positive, no objects will be evicted from the pool due to idle time alone. |  |
| Eviction Check Interval Millis a| Number | Specifies the number of milliseconds between runs of the object evictor. When non-positive, no object evictor is executed. |  |
| Exhausted Action a| Enumeration, one of:

** WHEN_EXHAUSTED_GROW
** WHEN_EXHAUSTED_WAIT
** WHEN_EXHAUSTED_FAIL a| Specifies the behavior of the Mule component pool when the pool is exhausted:

* `WHEN_EXHAUSTED_GROW` +
Creates a new Mule instance and returns it, which makes `maxActive` ineffective.
* `WHEN_EXHAUSTED_WAIT` +
Blocks by invoking `Object.wait(long)` until a new or idle object is available.
* `WHEN_EXHAUSTED_FAIL` +
Throws a `NoSuchElementException`

If a positive `maxWait` value is supplied, it will block for, at most, that many milliseconds, after which a `NoSuchElementException` will be thrown. If `maxThreadWait` is a negative value, it will block indefinitely. |  |
| Initialisation Policy a| Enumeration, one of:

** INITIALISE_NONE
** INITIALISE_ONE
** INITIALISE_ALL a| Determines how to initialize components in a pool:

* `INITIALISE_NONE` +
Will not load any components into the pool on startup
* `INITIALISE_ONE` +
Will load one initial component into the pool on startup
* `INITIALISE_ALL` +
Will load all components in the pool on startup |
| Disabled a| Boolean | Whether to disable pooling |  |
|===

[[oauth2-http-message-dispatcher-provider]]
=== OAuth2 HTTP Message Dispatcher Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Read Timeout a| Number |  | `5000` |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  | `MILLISECONDS` |
|===

[[ExpirationPolicy]]
=== Expiration Policy

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Max Idle Time a| Number | A scalar time value for the maximum amount of time a dynamic configuration instance is allowed to be idle before it's considered eligible for expiration. |  |
| Time Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS | A time unit that qualifies the *Max idle time* attribute. |  |
|===

[[SoapOutputEnvelope]]
=== SOAP Output Envelope

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Attachments a| Object |  |  |
| Body a| Binary |  |  |
| Headers a| Object |  |  |
|===

[[SoapAttributes]]
=== SOAP Attributes

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Additional Transport Data a| Object |  |  |
| Protocol Headers a| Object |  |  |
|===

[[http-requester-based-transport-provider]]
=== HTTP Requester Based Transport Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Requester Config a| String |  |  | x
|===

[[basic-auth-http-message-dispatcher-provider]]
=== Basic Authentication HTTP Message Dispatcher Provider

[%header,cols="20s,25a,30a,15a,10a"]
|===
| Field | Type | Description | Default Value | Required
| Username a| String |  |  | x
| Password a| String |  |  | x
| Read Timeout a| Number |  | 5000 |
| Read Timeout Unit a| Enumeration, one of:

** NANOSECONDS
** MICROSECONDS
** MILLISECONDS
** SECONDS
** MINUTES
** HOURS
** DAYS |  | MILLISECONDS |
|===

== See Also

* xref:connectors::introduction/introduction-to-anypoint-connectors.adoc[Introduction to Anypoint Connectors]
* https://help.mulesoft.com[MuleSoft Help Center]
